--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 
     </head>
     <body>
-        <iframe width="1500px" height="800px" src="pdfjs-3.0.279-dist\web\viewer.html?file=http://localhost/pdf%20test/hikitugi.pdf"></iframe>
+        <iframe width="1500px" height="800px" src="pdfjs-3.0.279-dist\web\viewer.html?file=hikitugi.pdf"></iframe>
     </body>
 </html>
